# lox-lang

./: .gitignore  main.py
clox/: CMakeLists.txt  main.c
clox/header/: chunk.h  common.h  compiler.h  debug.h  memory.h  object.h  scanner.h  table.h  value.h  vm.h
clox/lox/: test.lox
clox/notes/: debug内存问题.md
clox/src/: chunk.c  compiler.c  debug.c  memory.c  object.c  scanner.c  table.c  value.c  vm.c
interpreter/: callable.py  env.py  error.py  expr.py  interpreter_.py  lox.py  lox_class.py  parser.py  resolver.py  scanner.py  stmt.py  test.lox  token.py  token_.py
interpreter/test/: interpreter_test.py  scanner_test.py
interpreter/utils/: ast_printer.py  generate_ast.py
